--- a/src/app/comun/desarrollador/formAnimacionesComponent/formAnimaciones.component.html
+++ b/src/app/comun/desarrollador/formAnimacionesComponent/formAnimaciones.component.html
@@ -24,7 +24,7 @@
 			<div class="contenedorImagen">
 				<div (click)="desarrolladorService.abrirSelectorImagen('buff')" class="fondoAnimacion"></div>
 
-				<appAnimacionEfecto [loop]="true" [animacion]="desarrolladorService.animaciones.animaciones[desarrolladorService.animacionSeleccionadoIndex]"></appAnimacionEfecto>
+				<appAnimacionEfecto [loop]="true" [mute]="mute" [animacion]="desarrolladorService.animaciones.animaciones[desarrolladorService.animacionSeleccionadoIndex]"></appAnimacionEfecto>
 
 			</div>
 
@@ -36,6 +36,8 @@
 					<mat-label>ID</mat-label>
 					<input matInput placeholder="ID" formControlName="id">
 				  </mat-form-field>
+
+                  <img class="botonMute" src="./assets/desarrollador/mute.png" [ngClass]="{'muteado':mute}" (click)="mute= !mute"/>
 
 				  <mat-form-field appearance="legacy" class="formNombre">
 					<mat-label>Nombre Animación</mat-label>
@@ -108,6 +110,16 @@
 					<mat-label>OffsetY</mat-label>
 					<input matInput type="number" placeholder="" formControlName="offset_y">
 				  </mat-form-field>
+
+				  <mat-form-field appearance="legacy" class="formRotate">
+					<mat-label>Rotate</mat-label>
+					<input matInput type="number" placeholder="" formControlName="rotate">
+				  </mat-form-field>
+
+				  <mat-form-field appearance="legacy" class="formScale">
+					<mat-label>Scale</mat-label>
+					<input matInput type="number" placeholder="" formControlName="scale">
+				  </mat-form-field>
 			</form>
 
 
@@ -123,10 +135,10 @@
 			<div class="contenedorSubLista contenedorSonido">
 
 				<div class="tituloSubLista">Sonidos</div>
-				<div *ngFor="let sonido of this.desarrolladorService.animaciones.animaciones[desarrolladorService.animacionSeleccionadoIndex].sonidos; let i=index"  class="elemento" [ngClass]="renderListaSeleccionado('sonido',i)" (click)="true">{{sonido.nombre}}</div>
+				<div *ngFor="let sonido of this.desarrolladorService.animaciones.animaciones[desarrolladorService.animacionSeleccionadoIndex].sonidos; let i=index"  class="elemento" [ngClass]="renderListaSeleccionado('sonido',i)" (click)="desarrolladorService.seleccionarSonido(i)">{{sonido.nombre}}</div>
 			</div>
-				<div class="botonAdd botonSonidos" (click)="desarrolladorService.addSonido()">Añadir</div>
-
+			<div class="botonAdd botonSonidos" (click)="desarrolladorService.addSonido()">Añadir</div>
+                
 		</div>       
         <!-- FIN VISUALIZACIÓN ANIMACIONES -->
 
@@ -135,11 +147,11 @@
 	  <div class="contenedorLateral derecha">
         <div class="titulo"*ngIf="desarrolladorService.estadoPanelDatosDerecha=='Sonidos'">Sonidos: </div>
 		<div class="lista"*ngIf="desarrolladorService.estadoPanelDatosDerecha=='Sonidos'">
-			<div class="hechizo" (click)="desarrolladorService.eliminarBuffHechizo()">
+			<div class="hechizo" (click)="desarrolladorService.eliminarSonidoAnimacion()">
 				<img class="imagen" src="./assets/desarrollador/papelera.svg">
 				<div class="nombre">Eliminar sonido</div>
 			</div>
-			<div *ngFor="let sonido of this.desarrolladorService.animaciones.sonidos; let i=index"  class="hechizo" (click)="true">
+			<div *ngFor="let sonido of this.desarrolladorService.animaciones.sonidos; let i=index"  class="hechizo" (click)="desarrolladorService.asignarSonidoAnimacion(i)" [ngClass]="renderListaSeleccionado('listaSonidos',i)" >
 				<img class="imagen" src="./assets/Habilidades/Spell/283.png">
 				<div class="nombre">{{sonido.nombre}}</div>
 			</div>
