--- a/src/app/comun/desarrollador/formEnemigosComponent/formEnemigos.component.sass
+++ b/src/app/comun/desarrollador/formEnemigosComponent/formEnemigos.component.sass
@@ -38,7 +38,7 @@
         position: relative
         width: 100%
         height: 100%
-    form
+    .form
       position: absolute
       width: 100%
       height: 100%
@@ -83,7 +83,7 @@
     height: 15%
     text-align: center
     color: powderblue
-  form
+  .form
     position: relative
     width: 95%
     left: 5%
@@ -134,7 +134,105 @@
       color: black
       background-color: white
 
+.contenedorSubLista
+  position: absolute
+  width: 25%
+  top: 15%
+  height: 70%
+  left: 2%
+  background-color: grey
+  overflow-y: scroll
+  &.contenedorSubanimacion
+    top: 40%
+  &.contenedorOrdenes
+    top: 25%
+    height: 65%
+  .tituloSubLista
+    position: relative
+    display: flex
+    justify-content: center
+    background-color: black
+    color: white
+    width: 100%
+  .elemento
+    position: relative
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 100%
+    &:hover
+      background-color: white
+      color: black
+  .seleccionado
+      background-color: white
 
+.botonAdd
+  position: absolute
+  width: 25%
+  height: 10%
+  left: 2%
+  display: flex
+  align-items: center
+  justify-content: center
+  bottom: 0
+  background-color: greenyellow
+  &:hover
+    background-color: white
+    color: black
+  &.botonAccion
+    top: 85%
 
+#formularioAcciones 
+  position: absolute
+  display: grid
+  grid-template-columns: repeat(4, 1fr)
+  grid-template-rows: repeat(4, 1fr)
+  grid-column-gap: 15px
+  grid-row-gap: 15px
+  top: 12%
+  width: 72%
+  height: 85%
+  left: 28%
+  .selector
+    position: absolute
+    mat-form-field
+      width: 100%
 
+  mat-form-field
+    position: absolute
+    mat-label
+      color: chartreuse
+    input
+      color: white
+
+  .campo
+    width: 100%
+  .campo1  
+    grid-area: 1 / 1 / 2 / 2 
+  .campo2  
+    grid-area: 1 / 2 / 2 / 5 
+  .campo3  
+    grid-area: 2 / 1 / 3 / 2 
+  .campo4  
+    grid-area: 2 / 2 / 3 / 3 
+  .campo5  
+    grid-area: 2 / 3 / 3 / 4 
+  .campo6  
+    grid-area: 2 / 4 / 3 / 5 
+  .campo7  
+    grid-area: 3 / 1 / 4 / 2 
+  .campo8  
+    grid-area: 3 / 2 / 4 / 3 
+  .campo9  
+    grid-area: 3 / 3 / 4 / 4 
+  .campo10  
+    grid-area: 3 / 4 / 4 / 5 
+  .campo11  
+    grid-area: 4 / 1 / 5 / 2 
+  .campo12  
+    grid-area: 4 / 2 / 5 / 3 
+  .campo13  
+    grid-area: 4 / 3 / 5 / 4 
+  .campo14  
+    grid-area: 4 / 4 / 5 / 5 
 
