--- a/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.html
+++ b/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.html
@@ -71,24 +71,60 @@
                   </mat-form-field>
                   -->
 
-                  <mat-form-field appearance="legacy" class="formDañoDir">
-                    <mat-label>Daño</mat-label>
-                    <input matInput type="number" min="0" placeholder="Daño directo" formControlName="daño_dir">
-                  </mat-form-field>
+                  <div class="formTriple daño">
+                      <mat-form-field appearance="legacy" class="pa">
+                        <mat-label>Daño</mat-label>
+                        <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="daño_dir">
+                      </mat-form-field>
 
-                  <mat-form-field appearance="legacy" class="formHealDir">
-                    <mat-label>Heal</mat-label>
-                    <input matInput type="number" min="0" formControlName="heal_dir">
-                  </mat-form-field>
+                      <mat-form-field appearance="legacy" class="ad">
+                        <mat-label>AD</mat-label>
+                        <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="daño_esc_AD">
+                      </mat-form-field>
 
-                  <mat-form-field appearance="legacy" class="formEscudoDir">
-                    <mat-label>Escudo</mat-label>
-                    <input matInput type="number" min="0" formControlName="escudo_dir">
-                  </mat-form-field>
+                      <mat-form-field appearance="legacy" class="ap">
+                        <mat-label>AP</mat-label>
+                        <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="daño_esc_AP">
+                      </mat-form-field>
+                  </div>
+
+                  <div class="formTriple heal">
+                      <mat-form-field appearance="legacy" class="pa">
+                        <mat-label>Heal</mat-label>
+                        <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="heal_dir">
+                      </mat-form-field>
+
+                      <mat-form-field appearance="legacy" class="ad">
+                        <mat-label>AD</mat-label>
+                        <input matInput type="number" min="0" step="0.1" placeholder="Heal directo" formControlName="heal_esc_AD">
+                      </mat-form-field>
+
+                      <mat-form-field appearance="legacy" class="ap">
+                        <mat-label>AP</mat-label>
+                        <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="heal_esc_AP">
+                      </mat-form-field>
+                  </div>
+
+                  <div class="formTriple escudo">
+                      <mat-form-field appearance="legacy" class="pa">
+                        <mat-label>Escudo</mat-label>
+                        <input matInput type="number" min="0" step="0.1" placeholder="Escudo directo" formControlName="escudo_dir">
+                      </mat-form-field>
+
+                      <mat-form-field appearance="legacy" class="ad">
+                        <mat-label>AD</mat-label>
+                        <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="escudo_esc_AD">
+                      </mat-form-field>
+
+                      <mat-form-field appearance="legacy" class="ap">
+                        <mat-label>AP</mat-label>
+                        <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="escudo_esc_AP">
+                      </mat-form-field>
+                  </div>
 
                   <mat-form-field appearance="legacy" class="formAmenaza">
                     <mat-label>Mod. Amenaza</mat-label>
-                    <input matInput type="number" min="0" formControlName="mod_amenaza">
+                    <input matInput type="number" min="0" step="0.1" formControlName="mod_amenaza">
                   </mat-form-field>
 
                   <mat-form-field appearance="legacy" class="formEnergia">
@@ -100,8 +136,6 @@
                     <mat-label>Poder</mat-label>
                     <input matInput type="number" min="0" formControlName="poder">
                   </mat-form-field>
-
-
 
             </form>
 
@@ -159,7 +193,7 @@
 
         <!-- LISTA ANIMACION RELACIONAL -->
         <panelSelectorComponent *ngIf="desarrolladorService.estadoPanelDatosDerecha=='Animaciones'"
-            [tipo]="'Animacion_relacionada'"
+            [tipo]="'Animacion_relacionada_hechizo'"
             [titulo]="'ANIMACION RELACIONADA'"
             [botonAdd]="false"
             [lateral]="'derecha'"
