--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -4,9 +4,9 @@
 #contenedorInterfaz
     position: absolute
     color: white
-    width: 90%
-    height: 90vh
-    padding: 5vh 5%
+    width: 100vw 
+    height: 100vh
+    right: 0
     z-index: 20
     pointer-events: none
     div
@@ -29,18 +29,6 @@
 //************************************************* -->
 
 #contenedorInterfazHechizos
-    //background-color: rgba(0,0,0,0.6)
-    //box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5)
-
-        
-    .botonCancelar
-        position: relative
-        margin-top: 5vh
-        margin-bottom: 5vh
-        height: 5vw
-        width: 20vw
-        left: 35vw
-        text-align: center
 
     .contenedor
         position: absolute
@@ -49,19 +37,6 @@
         top: 25%
         color: $colorTexto
         background-color: $colorFondo2
-
-        .frame
-            position: absolute
-            top: 0 
-            left: 0 
-            padding-top: 5%
-            margin-top: -2.5%
-            padding-left: 3%
-            margin-left: -1.5%
-            width: 100%
-            height: 100%
-            background-image: url("../../../assets/Frames/Frame-Dialogo.png")
-            background-size: 100% 100% 
 
         .title
             margin-top: 20px
@@ -245,60 +220,56 @@
 
 
 //*************************************************
-//          Interfaz Movimiento:
+//          Interfaz ACCIONES ENEMIGO:
 //************************************************* -->
 
-#contenedorInterfazMovimiento
+#contenedorInterfazAccionesEnemigo
     position: absolute
     background-color: $colorFondo2 
     color: $colorTexto
-    width: 30vw
-    height: 40vh
-    top: 20vh 
-    left: 25vw
+    width: 50vw
+    height: 45vh
+    top: 50% 
+    left: 50%
+    padding: 20px
+    transform: translate(-50%, -50%)
 
-    .frame
-        position: absolute
-        top: 0 
-        left: 0 
-        padding-top: 5%
-        margin-top: -2.5%
-        padding-left: 3%
-        margin-left: -1.5%
-        width: 100%
-        height: 100%
-        background-image: url("../../../assets/Frames/Frame-Dialogo.png")
-        background-size: 100% 100% 
+    .titulo
+      text-align: center
 
-    .contenedorSeleccionValor
-      position: absolute
-      top: 15%
-      width: 80%
-      left: 10%
-      height: 30%
-      display: flex
-      align-items: center
-      justify-content: center
+    .contenedorMovimiento
+      display: grid
+      grid-template-columns: repeat(6, 1fr)
+      grid-template-rows: repeat(4, 1fr)
+      grid-column-gap: 15px
+      grid-row-gap: 15px
+      width: 100%
+      height: 85%
 
-      .iconoMovimiento
+      .texto
         position: relative
-        height: 100%
-      .botonCambiarValor
+        grid-area: 1 / 1 / 2 / 7 
+      .enemigo 
         position: relative
-        width: 10% //Cambio Upgrade
-        margin: 0 10%
-        font-size: 5em
-
-    .contenedorBotones
-        position: absolute
-        width: 30vw
-        bottom: 0
-    
+        grid-area: 2 / 1 / 4 / 3 
+      .valor
+        position: relative
+        grid-area: 2 / 3 / 3 / 5 
+      .flecha
+        position: relative
+        grid-area: 3 / 3 / 4 / 5 
+      .heroe
+        position: relative
+        grid-area: 2 / 5 / 4 / 7 
+      .botones
+        position: relative
+        grid-area: 4 / 1 / 5 / 7 
+        display: flex
+        justify-content: center
         .boton
-            position: relative
-            display: inline-flex
-            width: 15vw
-            text-align: center
+          position: absolute
+          width: 30%
+          height: 80%
 
     .contenedorAtributo
       position: absolute
@@ -329,7 +300,6 @@
           height: 100%
           background-image: url("../../../assets/Frames/Frame-atributo.png")
           background-size: 100% 100% 
-
       &.energia
         right: 5%
       &.movimiento
