--- a/src/styles.sass
+++ b/src/styles.sass
@@ -90,6 +90,28 @@ body
     -webkit-transform: scaleX(-1)
     transform: scaleX(-1)
  
+.divisor
+  background: #f3b95c
+  height: 2px
+  border: none
+
+.borde1
+    border-image: url("/assets/ui/frame/fr_05.png")
+    border-image-slice: 35 35 35 35
+    border-image-width: 15px
+    border-image-outset: 0px 0px 0px 0px
+    border-image-repeat: stretch stretch
+    border-style: solid
+
+.borde2
+    border-image: url("/assets/ui/frame/fr_02.png")
+    border-width: 19px
+    border-image-slice: 36 36 36 36
+    border-image-width: 20px 20px 20px 20px
+    border-image-outset: 0px 0px 0px 0px
+    border-image-repeat: stretch stretch
+    border-style: solid
+
 #botonPruebas
   position: absolute
   width: 10vh 
